<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/restaurant_bg">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="133dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/expose_regular"
                    android:text="Reservation"
                    android:textColor="@color/white"
                    android:textSize="75sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/scotch_display_regular"
                    android:text="- Please enter your personal details below-"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/scotch_display_regular"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="34sp" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#26FFFFFF"
                        android:ems="10"
                        android:hint="@string/enter_name"
                        android:inputType="text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/scotch_display_regular"
                        android:text="@string/phone_number"
                        android:textColor="@color/white"
                        android:textSize="34sp" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#26FFFFFF"
                        android:ems="10"
                        android:hint="@string/enter_phone_number"
                        android:inputType="number"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/grpSize"
                    android:layout_width="wrap_content"
                    android:layout_height="67dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewGrpSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/scotch_display_regular"
                        android:text="@string/pax"
                        android:textColor="@color/white"
                        android:textSize="34sp" />

                    <EditText
                        android:id="@+id/editTextNumberGrpSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#26FFFFFF"
                        android:ems="10"
                        android:hint="@string/enter_pax"
                        android:inputType="number"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="273dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/scotch_display_regular"
                        android:text="@string/date_of_reservation"
                        android:textColor="@color/white"
                        android:textSize="34sp" />

                    <DatePicker
                        android:id="@+id/datePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#26FFFFFF"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="287dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/scotch_display_regular"
                        android:text="@string/time_of_reservation"
                        android:textColor="@color/white"
                        android:textSize="34sp" />

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#26FFFFFF"
                        android:headerBackground="@color/white"
                        android:timePickerMode="spinner" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/smoke"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewSmoke"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/scotch_display_regular"
                        android:text="@string/choice_of_sitting_area"
                        android:textColor="@color/white"
                        android:textSize="34sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="73dp"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/radioGroupSmoke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#26FFFFFF"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonSmoke"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/scotch_display_regular"
                                android:text="@string/smoking"
                                android:textColor="@color/white"
                                app:buttonTint="#FFFFFF" />

                            <RadioButton
                                android:id="@+id/radioButtonNonSmoke"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/scotch_display_regular"
                                android:text="@string/non_smoking"
                                android:textColor="@color/white"
                                app:buttonTint="#FFFFFF" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/buttonConfirmReset"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/buttonConfirm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/confirm_reservation"
                            android:fontFamily="@font/scotch_display_regular"/>

                        <Button
                            android:id="@+id/buttonReset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reset"
                            android:fontFamily="@font/scotch_display_regular"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>